## plyxp 1.3.2

## plyxp 1.2.7

* `ungroup()` now properly ungroups the named rows() or cols() columns.
* `ungroup()` now does not drop groupings in other contexts if they exists.

## plyxp 1.2.5

* `pull.PlySummarizedExperiment()` now uses `tidyselect::vars_pull()` under the
  hood, which should have more consistent behavior to the original.

## plyxp 1.2.4

* dplyr functions on plyxp objects now allow for empty arguments, which will be
  ignored.
* `pull.PlySummarizedExperiment()` now allows for pulling the names of the
  rowData or colData by specifying `rows(.features)` and `cols(.samples)`
  respectively.

## plyxp 1.2.0

* Bioconductor 3.21 release

## plyxp 1.1.1

* added `plyxp_on()` as a way to have further interior mutability on the
  SummarizedExperiment class.

## plyxp 1.0.0

* BioConductor 3.20 release

## plyxp 0.99.24

* Since `plyxp` does not have a conflict with `tidySummarizedExperiment` anymore,
  we have removed package startup messages warning of potential conflicts.

## plyxp 0.99.21

* Fixed documentation of `?plyxp::mutate` and other dplyr functions reexported
  by `plyxp`.
* `PlySummarizedExperiment` should be able to hold any `SummarizedExperiment`
  object

## plyxp 0.99.20

* plyxp now wraps `SummarizedExperiment` in a shell class named
  `PlySummarizedExperiment` to avoid conflicts with `tidySummarizedExperiment`.
  * Use `PlySummarizedExperiment()` or `new_plyxp()` to create a new object.
  * Use standard Generics `se()` and `se<-()` to get and set the underlying
    `SummarizedExperiment` object.
  * plyxp `dplyr` verbs are now defined for `PlySummarizedExperiment` objects
    instead of `SummarizedExperiment` objects.
  * `PlySummarizedExperiment` uses enhanced printing methods to display
    `SummarizedExperiment` objects in a tidy format.

## plyxp 0.99.19

* Package renamed to `plyxp` to be more specific about its functionality

## plyxp 0.99.18

* messages checking for conflicts use `cli::` methods for pretty printing